# CountdownSolver

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  vcpkg.json
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: branch-name-check.yml  cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  osv-scanner.yml  release.yml  scorecard.yml  zizmor.yml
ci/: README.md  install-qt.ps1  install-qt.sh  requirements-gcovr.txt  requirements-qt.txt
cmake/: CompilerWarnings.cmake  Coverage.cmake  FindQt6.cmake  GenerateVersion.cmake  Packaging.cmake  Sanitizers.cmake
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  architecture.md  branch-protection.md  building.md  changelog.md  ci.md  faq.md  getting-started.md  how-to-play.md  index.md  install-ios.html  installing.md  requirements.txt  testing.md  translations.md
src/app/: CMakeLists.txt  DESIGN_SPEC.md  language_manager.cpp  language_manager.hpp  main.cpp  main_window.cpp  main_window.hpp  solver.cpp  solver.hpp
src/app/logging/: logging.cpp  logging.hpp
src/app/platform/: platform.hpp
src/app/platform/android/: AndroidManifest.xml  platform_android.cpp
src/app/platform/ios/: Info.plist.in  platform_ios.cpp
src/app/platform/linux/: platform_linux.cpp
src/app/platform/macos/: platform_macos.cpp
src/app/platform/windows/: platform_windows.cpp
src/app/qml/: AppState.qml  FormFactor.qml  Main.qml  Metrics.qml  Theme.qml
src/app/qml/components/: AccentChip.qml  BottomTabBar.qml  BottomTabButton.qml  Card.qml  FlatButton.qml  LetterRackInput.qml  LicensesDialog.qml  NavItem.qml  OnScreenKeyboard.qml  PadButton.qml  PageHeader.qml  SectionLabel.qml  SegChip.qml  SegControl.qml  Tile.qml  ViewToggle.qml
src/app/qml/pages/: ConundrumPage.qml  LettersPage.qml  NumbersPage.qml  SettingsPage.qml
src/app/resources/dictionary/: words_ar.txt  words_de.txt  words_en.txt  words_es.txt  words_fr.txt  words_he.txt  words_yi.txt
src/app/translations/: countdown_ar.ts  countdown_de.ts  countdown_es.ts  countdown_fr.ts  countdown_he.ts  countdown_yi.ts
src/lib/: CMakeLists.txt
src/lib/include/countdown/: countdown.hpp  error.hpp  version.hpp.in
src/lib/include/countdown/conundrum/: conundrum_game.hpp
src/lib/include/countdown/detail/: ranges_compat.hpp
src/lib/include/countdown/letters/: alphabet.hpp  dictionary.hpp  frequencies.hpp  letters_game.hpp
src/lib/include/countdown/numbers/: numbers_game.hpp  operation.hpp  solution.hpp
src/lib/src/: version.cpp
src/lib/src/letters/: alphabet.cpp  dictionary.cpp
src/lib/src/numbers/: numbers_game.cpp  solution.cpp
tests/: CMakeLists.txt
tests/app/: app_tests_main.cpp  solver_conundrum_test.cpp  solver_conundrum_test.hpp  solver_dictionary_test.cpp  solver_dictionary_test.hpp  solver_letters_test.cpp  solver_letters_test.hpp  solver_logging_test.cpp  solver_logging_test.hpp  solver_numbers_test.cpp  solver_numbers_test.hpp  solver_rack_test.cpp  solver_rack_test.hpp  solver_test.cpp  solver_test.hpp  solver_test_utils.hpp  solver_version_test.cpp  solver_version_test.hpp
tests/benchmark/: dictionary_benchmark.cpp
tests/data/: words.txt
tests/fuzz/: CMakeLists.txt  fuzz_letters.cpp  fuzz_numbers.cpp  fuzz_utf8.cpp
tests/integration/: solver_integration_test.cpp
tests/qml/: tst_ConundrumPage.qml  tst_LanguageManager.qml  tst_LanguageSwitching.qml  tst_LettersPage.qml  tst_NumbersPage.qml  tst_SettingsPage.qml  tst_Theme.qml  tst_qml.cpp  tst_qml_setup.hpp
tests/unit/: alphabet_test.cpp  conundrum_test.cpp  dictionary_i18n_test.cpp  letters_test.cpp  numbers_test.cpp  operation_test.cpp  utf8_test_support.hpp  version_test.cpp
